# TeaLeaf

./: .gitignore  CMakeLists.txt  README.md  tea.in  tea.problems  test.sh
2d/: CMakeLists.txt  KokkosCore_config.h  KokkosCore_config.tmp  Makefile  chunk.c  chunk.h  comms.c  comms.h  diffuse.c  initialise.c  kernel_interface.h  main.c  make.flags  parse_config.c  profiler.c  profiler.h  settings.c  settings.h  shared.c  shared.h  tea.in  tea.problems  test.sh
2d/c_kernels/cuda/: Makefile  c_kernels.h  cg.cu  cheby.cu  kernel_initialise.cu  model.cmake  pack_halos.cu  solver_methods.cu
2d/c_kernels/hip/: c_kernels.h  cg.cpp  cheby.cpp  cuknl_shared.cpp  cuknl_shared.h  field_summary.cpp  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  set_chunk_data.cpp  set_chunk_state.cpp  set_field.cpp  solver_methods.cpp  store_energy.cpp
2d/c_kernels/kokkos/: cg.cpp  cheby.cpp  chunk_extension.h  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  kokkos_shared.hpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  set_chunk_data.cpp  set_chunk_state.cpp  solver_methods.cpp  store_energy.cpp
2d/c_kernels/kokkos_hp/: cg.cpp  cg.hpp  field_summary.hpp  kernel_initialise.cpp  set_chunk_data.cpp
2d/c_kernels/kokkos_np/: cg.hpp  kernel_initialise.cpp  kernel_interface.cpp  pack_halos.hpp
2d/c_kernels/kokkos_orig/: cg.hpp  kernel_initialise.cpp  kernel_interface.cpp
2d/c_kernels/omp/: cg.c  cheby.c  diffuse_overload.c  jacobi.c  kernel_initialise.c  local_halos.c  model.cmake  pack_halos.c  ppcg.c  solver_methods.c  store_energy.c
2d/c_kernels/omp4/: Makefile  cg.c  cheby.c  jacobi.c  local_halos.c  pack_halos.c  ppcg.c  solver_methods.c
2d/c_kernels/omp4_clang/: cg.c  local_halos.c
2d/c_kernels/openacc/: Makefile  cg.c  cheby.c  ppcg.c  solver_methods.c
2d/c_kernels/raja/: Makefile
2d/c_kernels/serial/: cg.c  cheby.c  kernel_initialise.c  model.cmake  ppcg.c  solver_methods.c
2d/c_kernels/std-indices/: c_kernels.h  cg.cpp  cheby.cpp  chunk_extension.h  dpl_shim.h  field_summary.cpp  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  ranged.h  set_chunk_data.cpp  set_chunk_state.cpp  solver_methods.cpp  std_shared.h  store_energy.cpp
2d/c_kernels/sycl-acc/: cg.cpp  cheby.cpp  field_summary.cpp  jacobi.cpp  kernel_initialise.cpp  local_halos.cpp  (+8 more)
2d/cmake/: register_models.cmake
2d/drivers/: cg_driver.c  cheby_driver.c  eigenvalue_driver.c  field_summary_driver.c  jacobi_driver.c  kernel_initialise_driver.c  ppcg_driver.c
Benchmarks/: tea_bm_1.in  tea_bm_2.in  tea_bm_3.in  tea_bm_4.in  tea_bm_5e_1.in  tea_bm_5e_1_2.in  tea_bm_5e_1_4.in  tea_bm_5e_2.in  tea_bm_5e_2_2.in  tea_bm_5e_2_4.in  tea_bm_5e_4.in  tea_bm_5e_4_2.in  tea_bm_5e_4_4.in  tea_bm_5e_8.in  tea_bm_5e_8_2.in  tea_bm_5e_8_4.in  tea_bm_6.in
cmake/: register_models.cmake
driver/: application.h  cg_driver.c  cheby_driver.c  chunk.c  chunk.h  comms.c  comms.h  diffuse.c  drivers.h  eigenvalue_driver.c  field_summary_driver.c  halo_update_driver.c  initialise.c  jacobi_driver.c  kernel_initialise_driver.c  kernel_interface.h  main.c  parse_config.c  ppcg_driver.c  profiler.c  profiler.h  remote_halo_driver.c  set_chunk_data_driver.c  set_chunk_state_driver.c  settings.c  settings.h  shared.c  shared.h  solve_finished_driver.c  store_energy_driver.c
src/chapel/: Makefile  README.md  cg.chpl  cg_driver.chpl  cheby.chpl  cheby_driver.chpl  chunks.chpl  diffuse.chpl  eigenvalue_driver.chpl  field_summary.chpl  initialise.chpl  jacobi.chpl  jacobi_driver.chpl  local_halos.chpl  parse_config.chpl  ppcg.chpl  ppcg_driver.chpl  profile.chpl  set_chunk_data.chpl  set_chunk_state.chpl  settings.chpl  solve_finish_driver.chpl  solver_methods.chpl  store_energy.chpl  tealeaf.chpl
src/cuda/: c_kernels.h  cg.cu  cheby.cu  cuknl_shared.cu  cuknl_shared.h  field_summary.cu  jacobi.cu  kernel_initialise.cu  local_halos.cu  model.cmake  pack_halos.cu  ppcg.cu  set_chunk_data.cu  set_chunk_state.cu  set_field.cu  solver_methods.cu  store_energy.cu
src/hip/: c_kernels.h  cg.cpp  cheby.cpp  chunk_extension.h  cuknl_shared.cpp  cuknl_shared.h  field_summary.cpp  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  local_halos.cpp  model.cmake  pack_halos.cpp  ppcg.cpp  set_chunk_data.cpp  set_chunk_state.cpp  set_field.cpp  solver_methods.cpp  store_energy.cpp
src/kokkos/: c_kernels.hpp  cg.cpp  cheby.cpp  chunk_extension.h  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  kokkos_shared.hpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  set_chunk_data.cpp  set_chunk_state.cpp  solver_methods.cpp  store_energy.cpp
src/omp/: c_kernels.h  cg.c  cheby.c  chunk_extension.h  diffuse_overload.c  jacobi.c  kernel_initialise.c  kernel_interface.c  local_halos.c  model.cmake  pack_halos.c  pack_halos.cpp  ppcg.c  set_chunk_data.c  set_chunk_state.c  solver_methods.c  store_energy.c
src/openacc/: c_kernels.h  cg.c  cheby.c  chunk_extension.h  diffuse_overload.c  jacobi.c  kernel_initialise.c  local_halos.c  pack_halos.c  ppcg.c  solver_methods.c
src/serial/: c_kernels.h  cg.c  cheby.c  chunk_extension.h  field_summary.c  jacobi.c  kernel_initialise.c  kernel_interface.c  local_halos.c  pack_halos.c  ppcg.c  solver_methods.c  store_energy.c
src/std-indices/: c_kernels.h  cg.cpp  cheby.cpp  chunk_extension.h  dpl_shim.h  field_summary.cpp  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  set_chunk_data.cpp  set_chunk_state.cpp  solver_methods.cpp  store_energy.cpp
src/sycl-acc/: c_kernels.hpp  cg.cpp  cheby.cpp  chunk_extension.h  field_summary.cpp  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  set_chunk_data.cpp  set_chunk_state.cpp  solver_methods.cpp  sycl_shared.hpp
src/sycl-usm/: cg.cpp  cheby.cpp  chunk_extension.h  field_summary.cpp  jacobi.cpp  kernel_initialise.cpp  kernel_interface.cpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  set_chunk_data.cpp  set_chunk_state.cpp  solver_methods.cpp  sycl_shared.hpp
(+24 files in other folders)
